force-app/main/default/objects/Facebook_User__c/Facebook_User__c.object-meta.xml
<CustomObject>
    <label>Facebook User</label>
    <nameField>
        <displayFormat>FBU-{000000}</displayFormat>
        <label>Facebook User Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facebook Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>