force-app/main/default/objects/Facebook_User__c/fields/Facebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Id__c</fullName>
    <description>The Id of the user&apos;s FB page. This is used to tag Social Media posts that are posted to FB from the webapp.</description>
    <inlineHelpText>The Id of the user&apos;s FB page. This is used to tag Social Media posts that are posted to FB from the webapp.</inlineHelpText>
    <label>Facebook Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>