force-app/main/default/objects/Facebook_User__c/fields/Facebook_Url__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Url__c</fullName>
    <label>Facebook Url</label>
    <type>Url</type>
</CustomField>