force-app/main/default/objects/Facebook_User__c/fields/Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full ID</label>
    <type>Text</type>
</CustomField>